--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "ConnectionString": "Server=localhost\\sqlexpress;Database=ClosestFriendLocation;User Id=sa;Password=123456;"
+    "ConnectionString": "Server=localhost\\sqlexpress;Database=ClosestFriendLocation;User Id=sa;Password=123456;",
+    "ConnectionStringUbuntu": "Server=localhost;Database=ClosestFriendLocation;User Id=sa;Password=8Mixiric@;"
   },
   "Logging": {
     "LogLevel": {
