--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\Leandro\Source\Repos\ClosestFriendLocation\Api\Api.xml</DocumentationFile>
+    <DocumentationFile>Api.xml</DocumentationFile>
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
 
